Implementado eventos através do js

--- a/contato.html
+++ b/contato.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <ul>
+    <ul id="menu" class="menu li a menu_container">
         <li>
             <a href="index.html">Home</a>
         </li>
@@ -14,25 +15,50 @@
             <a href="contato.html">Contato</a>
         </li>
     </ul>
-    <h1>Entre em contato comigo</h1>
-    <form>
+    <h1 class="center">Entre em contato comigo</h1>
+    <form class="border center">
         <label for="nome">Nome:</label> <br>
-        <input type="text" id="nome">
-        <br>
+        <input type="text" id="nome" onkeyup="validaNome()">
+        <div id="txtNome"></div>
         <br>
         <label for="email">Email:</label> <br>
-        <input type="email" id="email">
-        <br>
+        <input type="email" id="email" onkeydown="validaEmail()">
+        <div id="txtEmail"></div>
         <br>
         <label for="assunto">Assunto:</label> <br>
-        <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+        <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup="validaAssunto()"></textarea>
+        <div id="txtAssunto"></div>
         <br>
         <br>
-        <button>Enviar</button>
+        <button onclick="enviar()">Enviar</button>
     </form>
-    <h2>Endereço</h2>
-    <p>Rua Manuel Castro e Mendonça, 31</p>
-    <p>São Paulo - SP</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.5889970766752!2d-46.40574632569638!3d-23.511308978834197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce647dcd60101b%3A0xccb0dde24fa218e8!2sR.%20Manuel%20Castro%20e%20Mendon%C3%A7a%2C%2031%20-%20Jardim%20Campos%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008151-650!5e0!3m2!1spt-BR!2sbr!4v1704736984841!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h2 class="center">Endereço</h2>
+    <p class="center">Rua Manuel Castro e Mendonça, 31</p>
+    <p class="center">São Paulo - SP</p>
+    <div class="mapa_container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.5889970766752!2d-46.40574632569638!3d-23.511308978834197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce647dcd60101b%3A0xccb0dde24fa218e8!2sR.%20Manuel%20Castro%20e%20Mendon%C3%A7a%2C%2031%20-%20Jardim%20Campos%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008151-650!5e0!3m2!1spt-BR!2sbr!4v1704736984841!5m2!1spt-BR!2sbr" width="800" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapa" onmousemove="mapaZoom()" onmouseout="mapaNormal()"></iframe>
+    </div>
+    <br>
+    <br>
+</div>
+<div id="redes-sociais" class="social_container flex">
+    <a href="https://www.linkedin.com/in/vinicius-lima-7b3b23235/" target="_blank">
+        <img class="social_icon" src="./assets/img/linkedin.svg"
+            alt="Logo do LinkedIn" /> 
+    </a>
+    <a href="https://github.com/vinysl" target="_blank">
+        <img class="social_icon" src="./assets/img/github.svg"
+            alt="Logo do Github" />
+    </a>
+    <a href="https://www.instagram.com/viny_sl/" target="_blank">
+        <img class="social_icon" src="./assets/img/instagram.svg"
+            alt="Logo do Instagram" />
+    </a>
+</div>
+<br>
+<footer class="center">
+    Desenvolvido por Vinicius Lima 👾 - 2024
+</footer>
+    <script src="./scripts/scripts.js"></script>
 </body>
 </html>
